--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html>
 <head>
   <title>Sousaball</title>
-  <script src="app/main.js" type="text/javascript"></script>
-  <script language="javascript" type="text/javascript" charset="utf-8">
-  function onLoad() {
-      console.log("on load event");
+  <script src="main.js" type="text/javascript"></script>
+  <script language="javascript" type="text/javascript">
+    window.onload = function () {
       if (window.PalmSystem) {
-          console.log("about to do palm stuff");
-          window.PalmSystem.stageReady();
-          console.log("did palm stuff");
+        window.PalmSystem.stageReady();
       }
-  }
+    }
   </script>
 </head>
-<body onload="onLoad()"></body>
 </html>
