--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html>
 <head>
   <title>Sousaball</title>
+  <link rel="stylesheet" href="style.css">
   <script src="main.js" type="text/javascript"></script>
-  <script language="javascript" type="text/javascript">
-    window.onload = function () {
-      if (window.PalmSystem) {
-        window.PalmSystem.stageReady();
-      }
-    }
-  </script>
 </head>
+<body>
+  <canvas id="canvas" width="320" height="480"></canvas>
+</body>
 </html>
