--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <title>Sousaball</title>
   <link rel="stylesheet" href="style.css">
+  <script src="clock.js" type="text/javascript"></script>
   <script src="main.js" type="text/javascript"></script>
 </head>
 <body>
-  <canvas id="canvas" width="320" height="480"></canvas>
+  <canvas id="canvas" width="320" height="320"></canvas>
 </body>
 </html>
